# sessh

./: .gitignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  DONE.md  PLAN.md  README.md  RELEASE.md  RELEASING.md  TODO.md  build.zig  build.zig.zon  cleanup.txt  package-lock.json  package.json  pyproject.toml
docs/: ARCHITECTURE.md  BANNERS.md  CLEANUP.md  COORDINATOR.md  COORDINATOR_PLAN.md  DIAGNOSTICS.md  FILESYSTEM_LAYOUT.md  NETWORKING.md  PACKAGING.md  PROTOCOL.md  RECONNECTION_UX.md  TERMINAL_EMULATOR.md  TERMINOLOGY.md  THREADING.md  USER_MANUAL.md
proto/: sessh.proto  sessh_handshake.proto
scripts/: build  check  check-termless  check_blocking.py  download-ghostty-deps  install  package-release  protocol-overhead  release  render-overhead
src/: README.md  bootstrapper.sh  broker.zig  client.zig  client_log.zig  client_renderer.zig  config.zig  io.zig  list_format.zig  main.zig  mux.zig  mux_attach.zig  mux_broker.zig  mux_cli.zig  mux_client_control.zig  mux_common.zig  mux_debug.zig  mux_detach.zig  mux_force_compat.zig  mux_kill.zig  mux_list.zig  mux_new.zig  mux_parser.zig  mux_proxy_stream.zig  mux_repaint.zig  mux_sessh.zig  mux_session_agent.zig  mux_stream_agent.zig  mux_stream_broker.zig  protocol.zig  proxy_control.zig  pty_process.zig  reconnect.zig  reconnect_control.zig  reconnect_title.zig  relay.zig  runtime_refresher.zig  sessh-wrapper.sh  session_agent.zig  session_registry.zig  (+7 more)
tests/: bootstrapper_harness.py  fake_ssh.py  harness_cleanup.py  podman_ssh_harness.py  sessh_termless.test.mjs  sessh_termless_conformance.test.mjs  ssh_harness.py  (+31 more)
(+213 files in other folders)
