[project]
name = "sessh"
version = "0.0.0"
description = "Session SSH"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.2",
  "ptyprocess>=0.7.0",
]

[project.scripts]
sessh = "sessh.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sessh"]

[dependency-groups]
dev = [
    "shellcheck-py>=0.11.0.1",
]
