[project]
name = "sessh"
version = "0.2.0"
description = "Session SSH"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  "PyYAML>=6.0.2",
  "ptyprocess>=0.7.0",
]

[project.scripts]
sessh = "sessh.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sessh"]

[tool.mypy]
python_version = "3.11"
show_error_codes = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "ptyprocess"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "pex>=2.94.0",
    "ruff>=0.15.12",
    "shellcheck-py>=0.11.0.1",
    "types-pyyaml>=6.0.12.20260508",
]
